Fix styles of statuses table on tablet

--- a/src/components/@pages/StatusesPage/Programs/Programs.scss
+++ b/src/components/@pages/StatusesPage/Programs/Programs.scss
@@ -216,9 +216,11 @@
 	// program
 
 	.program {
-		display: block;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-auto-flow: row;
+		column-gap: 1rem;
 		position: relative;
-		columns: 2 1rem;
 		padding: 1rem 1.5rem;
 		@include disable-paper;
 
@@ -228,9 +230,26 @@
 	}
 
 	.program__cell {
+		min-width: 0;
 		display: block;
 		padding: 0.375rem 0 !important;
 		border: none;
+	}
+
+	.program__cell-premium {
+		order: 1;
+	}
+
+	.program__cell-invest {
+		order: 2;
+	}
+
+	.program__cell-income {
+		order: 3;
+	}
+
+	.program__cell-conditions {
+		order: 4;
 	}
 
 	.program__label {
