--- a/src/components/@uikit/Table/Table.scss
+++ b/src/components/@uikit/Table/Table.scss
@@ -154,6 +154,7 @@
 			.table__cell-value {
 				min-width: 0;
 				word-break: break-all;
+				text-align: right;
 			}
 		}
 	}
